automation/evolution-api/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-api-public
  namespace: automation
spec:
  ingressClassName: traefik
  rules:
    - host: evolution.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evolution-api
                port:
                  number: 8085
